--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Imports:
+    openintro,
+    Stat2Data,
+    moderndive,
+    Sleuth2
 Depends: 
     R (>= 2.10)
