--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,17 @@
 Package: QSCI381
 Type: Package
 Title: Data used in QSCI 381, University of Washington
-Version: 0.1.0
+Version: 1.0.0
 Author: Various QSCI Instructors
 Maintainer: Tim Essington <essing@uw.edu>
-Description: This package uploads several data sets used by QSCI instructors.  Some instructors will also teach you how to import data directly into R.
+Description: This package uploads data sets used by QSCI instructors.  Some instructors will also teach you how to import data directly into R.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports:
+Depends: 
+    R (>= 3.5),
     openintro,
     Stat2Data,
     moderndive,
     Sleuth2
-Depends: 
-    R (>= 2.10)
